--- a/src/AspnetCoreRabbitMq/project.json
+++ b/src/AspnetCoreRabbitMq/project.json
@@ -18,7 +18,8 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "RabbitMQ.Client": "4.1.1-rc1",
     "Newtonsoft.Json": "9.0.2-beta1",
-    "AspnetCoreRabbitMq.Infrastructure": "1.0.0-*"
+    "AspnetCoreRabbitMq.Infrastructure": "1.0.0-*",
+    "DotnetCoreRabbitMq.Core": "1.0.0-*"
   },
 
   "tools": {
